# ch_potentials

./: .gitignore  .gitmodules  README.md  Rakefile.rb  rebuttal_aaai
code/compute_ch/: CMakeLists.txt
code/osm_import/: CMakeLists.txt  build.sh  import_osm.cpp
code/routingkit2/: Makefile  generate_make_file
code/routingkit2/schema/: geo_index  map
code/routingkit2/src/: bit_select.cpp  bit_select.h  bit_vector.cpp  bit_vector.h  buffered_async_reader.cpp  buffered_async_reader.h  data_sink.cpp  data_sink.h  data_source.cpp  data_source.h  dir.h  emulate_gcc_builtin.h  enumerator.h  file_array.cpp  file_array.h  geo_index.cpp  geo_index.h  geo_index_schema.h  geo_index_test_server.cpp  geo_pos.cpp  geo_pos.h  gpoly.cpp  gpoly.h  http_server.cpp  http_server.h  id_mapper.cpp  id_mapper.h  inverse_func.h  map.cpp  map.h  map_schema.h  min_max.h  optional.h  osm_decoder.cpp  osm_decoder.h  osm_import.cpp  osm_import.h  osm_profile.cpp  osm_profile.h  osm_types.h  (+31 more)
code/routingkit2/tools/: compile_data_schema.py
code/routingkit_ch_pot/: build.sh  ch_pot.cpp
eval/: Alternatives.ipynb  applications.ipynb  applications.py  bidir-improved.ipynb  bidir.ipynb  bidir_features.ipynb  bidir_features.py  bidir_features_all.ipynb  building_blocks.ipynb  building_blocks.py  graphs.ipynb  graphs.py  kNN CCH.ipynb  nodes_per_dist.ipynb  ranks.ipynb  rphast_comparison.ipynb  rphast_comparison.py  rphast_inc.ipynb  rphast_inc.py  scaled_weights.py  weight_scaling.ipynb
paper/: CHANGELOG  Formatting-Instructions-LaTeX-2021.tex  acmart.cls  ch_potentials.tex  dblp.bib  export_acm.sh  export_dagstuhl.sh  formatting-instructions-latex-2020.tex  rebuttal.txt  references.bib  submit_arxiv.sh
paper/table/: applications.tex  bidir.tex  bidir_pruning.tex  bidir_switching.tex  building_blocks.tex  graphs.tex  knn.tex
